# memory-playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: architecture.md  instrumentation.md  roadmap.md
scripts/: build.sh  run.sh  test.sh  tests.sh
src/: app_config.hpp  input.cpp  input.hpp  main.cpp  renderer.cpp  renderer.hpp  simulation.hpp
src/rendering/: render_style.hpp  renderer_dashboard.cpp  renderer_memory.cpp
src/simulation/: access_pattern.hpp  benchmark.hpp  cache.hpp  challenge.hpp  constants.hpp  experiment_settings.hpp  history.hpp  instrumentation.hpp  memory.hpp  metrics.hpp  register_file.hpp  scenario_definition.hpp  simulation_run.hpp  simulation_state.hpp  trace_analysis.hpp
tests/: simulation_tests.cpp
